# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  Lab_1.ipynb  README.md
my_project/: pyproject.toml
wandb/: latest-run
wandb/run-20241105_001728-36q3xwfn/: run-36q3xwfn.wandb
wandb/run-20241105_001728-36q3xwfn/files/: config.yaml  wandb-metadata.json  wandb-summary.json
