[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["MichalMichniak <michalmichniak2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.6"
matplotlib = "^3.9.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
